--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "5.2.0",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
