--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/browser-image-compression": "^1.0.9",
     "@types/eslint": "^7.2.6",
+    "@types/moment": "^2.13.0",
     "@types/mongodb": "^4.0.7",
     "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
@@ -45,6 +46,7 @@
     "image-webpack-loader": "^8.1.0",
     "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "^1.3.3",
+    "moment": "^2.29.3",
     "mongodb": "^4.5.0",
     "postcss": "^8.4.12",
     "postcss-import": "14.0.0",
@@ -55,6 +57,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-html-parser": "^2.0.2",
     "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "5.2.0",
     "sass": "^1.51.0",
